--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="treichel.screensharingmobile.MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addContactPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
