--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -38,4 +38,31 @@
         android:layout_toLeftOf="@+id/contactStatusTextView"
         android:layout_toStartOf="@+id/contactStatusTextView"
         app:srcCompat="@android:color/holo_red_light" />
+
+    <Button
+        android:id="@+id/callButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/avatarImageView"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignStart="@+id/avatarImageView"
+        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginRight="19dp"
+        android:text="Call" />
+
+    <Button
+        android:id="@+id/messageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/callButton"
+        android:layout_alignLeft="@+id/callButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/callButton"
+        android:layout_alignStart="@+id/callButton"
+        android:layout_marginBottom="29dp"
+        android:text="Message" />
+
 </RelativeLayout>
